fix OutSystems null dates and xml handling

--- a/ServiceStudioEnvironmentsSyncApp/SettingsExample.json
+++ b/ServiceStudioEnvironmentsSyncApp/SettingsExample.json
@@ -5,5 +5,6 @@
   "SyncIntervalInMinutes": 5,
   "SyncSensitiveInfo": true,
   "LogRetentionInDays": 30,
-  "AutoStart": false
+  "AutoStart": false,
+  "ApiKey": "YOUR_API_KEY"
 }
